src/commands/grammar/CommandParser.py
# Generated from CommandParser.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CommandParser ( Parser ):

    grammarFileName = "CommandParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "';'", "'|'", "<INVALID>", 
                     "<INVALID>", "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "BQ_START", "SEQ", "PIPE", "WS", "UNQUOTED", 
                      "LT", "GT", "SQ_START", "DQ_START", "SQ_CONTENT", 
                      "SQ_END", "BQ_CONTENT", "BQ_END", "DQ_CONTENT", "DQ_END" ]

    RULE_cmdline = 0
    RULE_command = 1
    RULE_pipe = 2
    RULE_call = 3
    RULE_atom = 4
    RULE_argument = 5
    RULE_argumentElement = 6
    RULE_redirection = 7
    RULE_quoted = 8
    RULE_singleQuoted = 9
    RULE_backQuoted = 10
    RULE_doubleQuoted = 11
    RULE_doubleQuotedElement = 12

    ruleNames =  [ "cmdline", "command", "pipe", "call", "atom", "argument", 
                   "argumentElement", "redirection", "quoted", "singleQuoted", 
                   "backQuoted", "doubleQuoted", "doubleQuotedElement" ]

    EOF = Token.EOF
    BQ_START=1
    SEQ=2
    PIPE=3
    WS=4
    UNQUOTED=5
    LT=6
    GT=7
    SQ_START=8
    DQ_START=9
    SQ_CONTENT=10
    SQ_END=11
    BQ_CONTENT=12
    BQ_END=13
    DQ_CONTENT=14
    DQ_END=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class CmdlineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(CommandParser.CommandContext,0)


        def EOF(self):
            return self.getToken(CommandParser.EOF, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_cmdline

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdline" ):
                return visitor.visitCmdline(self)
            else:
                return visitor.visitChildren(self)




    def cmdline(self):

        localctx = CommandParser.CmdlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_cmdline)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.command(0)
            self.state = 27
            self.match(CommandParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CommandParser.RULE_command

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class CallCommandContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CommandParser.CommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def call(self):
            return self.getTypedRuleContext(CommandParser.CallContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallCommand" ):
                return visitor.visitCallCommand(self)
            else:
                return visitor.visitChildren(self)


    class PipeCommandContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CommandParser.CommandContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def pipe(self):
            return self.getTypedRuleContext(CommandParser.PipeContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPipeCommand" ):
                return visitor.visitPipeCommand(self)
            else:
                return visitor.visitChildren(self)


    class SeqContext(CommandContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CommandParser.CommandContext
            super().__init__(parser)
            self.left = None # CommandContext
            self.right = None # CommandContext
            self.copyFrom(ctx)

        def SEQ(self):
            return self.getToken(CommandParser.SEQ, 0)
        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandParser.CommandContext)
            else:
                return self.getTypedRuleContext(CommandParser.CommandContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSeq" ):
                return visitor.visitSeq(self)
            else:
                return visitor.visitChildren(self)



    def command(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CommandParser.CommandContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_command, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = CommandParser.PipeCommandContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 30
                self.pipe(0)
                pass

            elif la_ == 2:
                localctx = CommandParser.CallCommandContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 31
                self.call()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 39
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CommandParser.SeqContext(self, CommandParser.CommandContext(self, _parentctx, _parentState))
                    localctx.left = _prevctx
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_command)
                    self.state = 34
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 35
                    self.match(CommandParser.SEQ)
                    self.state = 36
                    localctx.right = self.command(3) 
                self.state = 41
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PipeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CommandParser.RULE_pipe

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class SinglePipeContext(PipeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CommandParser.PipeContext
            super().__init__(parser)
            self.left = None # CallContext
            self.right = None # CallContext
            self.copyFrom(ctx)

        def PIPE(self):
            return self.getToken(CommandParser.PIPE, 0)
        def call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandParser.CallContext)
            else:
                return self.getTypedRuleContext(CommandParser.CallContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSinglePipe" ):
                return visitor.visitSinglePipe(self)
            else:
                return visitor.visitChildren(self)


    class NestedPipeContext(PipeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CommandParser.PipeContext
            super().__init__(parser)
            self.left = None # PipeContext
            self.right = None # CallContext
            self.copyFrom(ctx)

        def PIPE(self):
            return self.getToken(CommandParser.PIPE, 0)
        def pipe(self):
            return self.getTypedRuleContext(CommandParser.PipeContext,0)

        def call(self):
            return self.getTypedRuleContext(CommandParser.CallContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNestedPipe" ):
                return visitor.visitNestedPipe(self)
            else:
                return visitor.visitChildren(self)



    def pipe(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CommandParser.PipeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_pipe, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = CommandParser.SinglePipeContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 43
            localctx.left = self.call()
            self.state = 44
            self.match(CommandParser.PIPE)
            self.state = 45
            localctx.right = self.call()
            self._ctx.stop = self._input.LT(-1)
            self.state = 52
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CommandParser.NestedPipeContext(self, CommandParser.PipeContext(self, _parentctx, _parentState))
                    localctx.left = _prevctx
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_pipe)
                    self.state = 47
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 48
                    self.match(CommandParser.PIPE)
                    self.state = 49
                    localctx.right = self.call() 
                self.state = 54
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._redirection = None # RedirectionContext
            self.redirections = list() # of RedirectionContexts
            self._atom = None # AtomContext
            self.atoms = list() # of AtomContexts

        def argument(self):
            return self.getTypedRuleContext(CommandParser.ArgumentContext,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(CommandParser.WS)
            else:
                return self.getToken(CommandParser.WS, i)

        def redirection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandParser.RedirectionContext)
            else:
                return self.getTypedRuleContext(CommandParser.RedirectionContext,i)


        def atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandParser.AtomContext)
            else:
                return self.getTypedRuleContext(CommandParser.AtomContext,i)


        def getRuleIndex(self):
            return CommandParser.RULE_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = CommandParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 55
                self.match(CommandParser.WS)


            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6 or _la==7:
                self.state = 58
                localctx._redirection = self.redirection()
                localctx.redirections.append(localctx._redirection)
                self.state = 59
                self.match(CommandParser.WS)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.argument()
            self.state = 71
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 67
                    self.match(CommandParser.WS)
                    self.state = 68
                    localctx._atom = self.atom()
                    localctx.atoms.append(localctx._atom) 
                self.state = 73
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 74
                self.match(CommandParser.WS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def redirection(self):
            return self.getTypedRuleContext(CommandParser.RedirectionContext,0)


        def argument(self):
            return self.getTypedRuleContext(CommandParser.ArgumentContext,0)


        def getRuleIndex(self):
            return CommandParser.RULE_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = CommandParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_atom)
        try:
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6, 7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.redirection()
                pass
            elif token in [1, 5, 8, 9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.argument()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._argumentElement = None # ArgumentElementContext
            self.elements = list() # of ArgumentElementContexts

        def argumentElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandParser.ArgumentElementContext)
            else:
                return self.getTypedRuleContext(CommandParser.ArgumentElementContext,i)


        def getRuleIndex(self):
            return CommandParser.RULE_argument

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument" ):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)




    def argument(self):

        localctx = CommandParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_argument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 81
                    localctx._argumentElement = self.argumentElement()
                    localctx.elements.append(localctx._argumentElement)

                else:
                    raise NoViableAltException(self)
                self.state = 84 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CommandParser.RULE_argumentElement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class QuotedArgElemContext(ArgumentElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CommandParser.ArgumentElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def quoted(self):
            return self.getTypedRuleContext(CommandParser.QuotedContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuotedArgElem" ):
                return visitor.visitQuotedArgElem(self)
            else:
                return visitor.visitChildren(self)


    class UnquotedContext(ArgumentElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CommandParser.ArgumentElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def UNQUOTED(self):
            return self.getToken(CommandParser.UNQUOTED, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnquoted" ):
                return visitor.visitUnquoted(self)
            else:
                return visitor.visitChildren(self)



    def argumentElement(self):

        localctx = CommandParser.ArgumentElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_argumentElement)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 8, 9]:
                localctx = CommandParser.QuotedArgElemContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.quoted()
                pass
            elif token in [5]:
                localctx = CommandParser.UnquotedContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(CommandParser.UNQUOTED)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RedirectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def argument(self):
            return self.getTypedRuleContext(CommandParser.ArgumentContext,0)


        def LT(self):
            return self.getToken(CommandParser.LT, 0)

        def WS(self):
            return self.getToken(CommandParser.WS, 0)

        def GT(self):
            return self.getToken(CommandParser.GT, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_redirection

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRedirection" ):
                return visitor.visitRedirection(self)
            else:
                return visitor.visitChildren(self)




    def redirection(self):

        localctx = CommandParser.RedirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_redirection)
        self._la = 0 # Token type
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                localctx.op = self.match(CommandParser.LT)
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 91
                    self.match(CommandParser.WS)


                self.state = 94
                self.argument()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                localctx.op = self.match(CommandParser.GT)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 96
                    self.match(CommandParser.WS)


                self.state = 99
                self.argument()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuotedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def singleQuoted(self):
            return self.getTypedRuleContext(CommandParser.SingleQuotedContext,0)


        def doubleQuoted(self):
            return self.getTypedRuleContext(CommandParser.DoubleQuotedContext,0)


        def backQuoted(self):
            return self.getTypedRuleContext(CommandParser.BackQuotedContext,0)


        def getRuleIndex(self):
            return CommandParser.RULE_quoted

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuoted" ):
                return visitor.visitQuoted(self)
            else:
                return visitor.visitChildren(self)




    def quoted(self):

        localctx = CommandParser.QuotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_quoted)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.singleQuoted()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.doubleQuoted()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.backQuoted()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingleQuotedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SQ_START(self):
            return self.getToken(CommandParser.SQ_START, 0)

        def SQ_CONTENT(self):
            return self.getToken(CommandParser.SQ_CONTENT, 0)

        def SQ_END(self):
            return self.getToken(CommandParser.SQ_END, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_singleQuoted

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleQuoted" ):
                return visitor.visitSingleQuoted(self)
            else:
                return visitor.visitChildren(self)




    def singleQuoted(self):

        localctx = CommandParser.SingleQuotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_singleQuoted)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(CommandParser.SQ_START)
            self.state = 108
            self.match(CommandParser.SQ_CONTENT)
            self.state = 109
            self.match(CommandParser.SQ_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BackQuotedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BQ_START(self):
            return self.getToken(CommandParser.BQ_START, 0)

        def BQ_CONTENT(self):
            return self.getToken(CommandParser.BQ_CONTENT, 0)

        def BQ_END(self):
            return self.getToken(CommandParser.BQ_END, 0)

        def getRuleIndex(self):
            return CommandParser.RULE_backQuoted

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBackQuoted" ):
                return visitor.visitBackQuoted(self)
            else:
                return visitor.visitChildren(self)




    def backQuoted(self):

        localctx = CommandParser.BackQuotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_backQuoted)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(CommandParser.BQ_START)
            self.state = 112
            self.match(CommandParser.BQ_CONTENT)
            self.state = 113
            self.match(CommandParser.BQ_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoubleQuotedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._doubleQuotedElement = None # DoubleQuotedElementContext
            self.elements = list() # of DoubleQuotedElementContexts

        def DQ_START(self):
            return self.getToken(CommandParser.DQ_START, 0)

        def DQ_END(self):
            return self.getToken(CommandParser.DQ_END, 0)

        def doubleQuotedElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CommandParser.DoubleQuotedElementContext)
            else:
                return self.getTypedRuleContext(CommandParser.DoubleQuotedElementContext,i)


        def getRuleIndex(self):
            return CommandParser.RULE_doubleQuoted

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoubleQuoted" ):
                return visitor.visitDoubleQuoted(self)
            else:
                return visitor.visitChildren(self)




    def doubleQuoted(self):

        localctx = CommandParser.DoubleQuotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_doubleQuoted)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(CommandParser.DQ_START)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==14:
                self.state = 116
                localctx._doubleQuotedElement = self.doubleQuotedElement()
                localctx.elements.append(localctx._doubleQuotedElement)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self.match(CommandParser.DQ_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoubleQuotedElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CommandParser.RULE_doubleQuotedElement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DqContentContext(DoubleQuotedElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CommandParser.DoubleQuotedElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DQ_CONTENT(self):
            return self.getToken(CommandParser.DQ_CONTENT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDqContent" ):
                return visitor.visitDqContent(self)
            else:
                return visitor.visitChildren(self)


    class BqDqElemContext(DoubleQuotedElementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CommandParser.DoubleQuotedElementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def backQuoted(self):
            return self.getTypedRuleContext(CommandParser.BackQuotedContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBqDqElem" ):
                return visitor.visitBqDqElem(self)
            else:
                return visitor.visitChildren(self)



    def doubleQuotedElement(self):

        localctx = CommandParser.DoubleQuotedElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_doubleQuotedElement)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = CommandParser.BqDqElemContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.backQuoted()
                pass
            elif token in [14]:
                localctx = CommandParser.DqContentContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(CommandParser.DQ_CONTENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.command_sempred
        self._predicates[2] = self.pipe_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def command_sempred(self, localctx:CommandContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 2)
         

    def pipe_sempred(self, localctx:PipeContext, predIndex:int):
            if predIndex == 1:
                return self.precpred(self._ctx, 1)

         




